[workspace]
members = ["programs/fantasy_sports"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
solana-program = "1.18.15"

[profile.release]
overflow-checks = true
opt-level = "s"
lto = true
codegen-units = 1