[package]
name = "fantasy_sports"
version = "0.1.0"
description = "Fantasy sports smart contract"
edition = "2021"

[lib]
name = "fantasy_sports"
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-log-ix-name = []
no-idl = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
try_from = "0.3.2"


# add later once compatible:
# mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }




